<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2013 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>

    <string name="app_name">SyncKit Demo</string>
    <string name="account_name">SyncKit Demo</string>
    <string name="title_entry_detail">Entry Detail</string>
    <string name="loading">Waiting for sync...</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_add">Add</string>
    <string name="title_activity_model_selection">Registered Models For Sync</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_transformer_list">Transformers List </string>
    <string name="title_activity_pipe_list">Pipes List</string>
    <string name="transformer_list_activity">Transformers List</string>
    <string name="title_activity_pipe">PipeActivity</string>
    <string name="title_activity_turbine_list">Turbines List</string>
    <string name="title_activity_boiler_list">Boilers List</string>
    <string name="title_activity_transformer_details_activity">Edit Transformer Details</string>
    <string name="description_save">Save</string>
    <string name="transformer_name">Transformer Name</string>
    <string name="transformer_location">Transformer Location</string>
    <string name="transformer_current_temp">Transformer Current Temperature</string>
    <string name="transformer_make">Transformer Make</string>
    <string name="transformer_winding_count">Transformer Winding Count</string>
    <string name="transformer_winding_make">Transformer Winding Make</string>
    <string name="transformer_oil_level">Transformer Oil Level</string>
    <string name="transformer_operating_power">Transformer Operating Power</string>
    <string name="transformer_type">Transformer Type</string>
    <string name="title_activity_boiler_details_activity">Edit Boiler Details</string>
    <string name="boiler_health_status">Boiler Health Status</string>
    <string name="boiler_current_containment">Boiler Current Containment</string>
    <string name="boiler_pressure">Boiler Pressure</string>
    <string name="boiler_temp">Boiler Temperature</string>
    <string name="boiler_make">Boiler Make</string>
    <string name="boiler_capacity">Boiler Capacity</string>
    <string name="boiler_location">Boiler Location</string>
    <string name="boiler_name">Boiler Name</string>
    <string name="title_activity_turbine_details_activity">Edit Turbine Details</string>
    <string name="turbine_name">Turbine Name</string>
    <string name="turbine_location">Turbine Location</string>
    <string name="turbine_temp">Turbine Temperature</string>
    <string name="turbine_capacity">Turbine Capacity</string>
    <string name="turbine_pressure">Turbine Pressure</string>
    <string name="turbine_RPM">Turbine RPM</string>
    <string name="turbine_oil_level">Turbine Oil Level</string>
    <string name="turbine_health_status">Turbine Compressor Health Status</string>
    <string name="turbine_rotation_speed">Turbine Rotation Speed</string>
    <string name="turbine_rotor_count">Turbine Rotor Count</string>
    <string name="title_activity_pipe_details_activity">Edit Pipe Details</string>
    <string name="pipe_location">Pipe Location</string>
    <string name="pipe_current_containment">Pipe Current Containment</string>
    <string name="pipe_diameter">Pipe Diameter</string>
    <string name="pipe_length">Pipe Length</string>
    <string name="pipe_make">Pipe Make</string>
    <string name="pipe_temp">Pipe Temperature</string>
    <string name="pipe_pressure">Pipe Pressure</string>
    <string name="pipe_health_status">Pipe Health Status</string>
    <string name="pipe_max_temp">Pipe Max Temperature</string>
    <string name="pipe_max_pressure">Pipe Max Pressure</string>

</resources>